fixed codes for movie container for alignment and placement

--- a/style.css
+++ b/style.css
@@ -30,4 +30,5 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
